# OpenCVDemo

./: .gitignore  CMakeLists.txt
note/: basic.md
src/: CMakeLists.txt
src/Difference/: main.cpp
src/OpenCV_with_QT/: main.cpp
src/setup/: main.cpp  test.cpp
